# creative-writing-ida

./: .gitignore  DATA_COLLECTION_PLAN.md  api_interface.py  config.py  file_manager.py  load_writing_prompts.py  models.py  pyproject.toml  session_runner.py  simulate_tree.py  tree_builder.py
examples/: fiction_leaf_examples.xml  fiction_parent_examples.xml
prompts/: fiction_leaf_readme.md  fiction_parent_readme.md
sessions/: session_20250621_153155.xml  session_20250621_153539.xml  session_20250621_154816.xml  session_example.xml  tree_generation_20250622_012856.xml  tree_generation_20250622_012946.xml
src/: config.py  data_collection_main.py  logging_utils.py  main.py  models.py  placeholder_replacer.py  session.py  session_processor.py  session_runner.py  session_validator.py  simulate_tree.py  tree_builder.py  tree_config.py  tree_node.py  tree_runner.py  tree_runner_config.py  tree_runner_main.py  xml_formatter.py  xml_service.py  xml_utils.py  xml_validator.py
src/data_collection/: __init__.py  config.py  example_aggregator.py  experiment.py  file_manager.py  node_selector.py  prompt_sampler.py  session_generator.py
tests/: test_claude_base_xml.py  test_claude_chat_xml.py  test_file_manager.py  test_main.py  test_models.py  test_placeholder_replacer.py  test_session.py  test_session_processor.py  test_session_runner.py  test_session_validator.py  test_tree_builder.py  test_tree_config.py  test_tree_node.py  test_tree_runner.py  test_xml_formatter.py  test_xml_service.py  test_xml_utils.py  test_xml_validator.py
writing_prompts/: test.txt  validation.txt
(+18 files in other folders)
