[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creative-writing-ida"
version = "0.1.0"
description = "IDA for Creative Writing"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"anthropic>=0.25.0",
	"python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=6.0",
	"black",
	"flake8",
	"mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
